Added keyup search functionality on bike shop locator

--- a/app/views/bikes/index.html.erb
+++ b/app/views/bikes/index.html.erb
@@ -51,7 +51,7 @@
                   <% elsif bike_component.weeks_left > 0 && bike_component.weeks_left <= 2 %>
                     <p> <%= bike_component.days_left.to_i %> days until check </p>
                   <% else %>
-                    <p>Check now!</p>
+                    <p>Check now! ⚠</p>
                   <% end %>
                 </div>
             </div>
