--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -1,5 +1,5 @@
 <div class="navbar">
   <div class="nav-link"><%= link_to "Garage", bikes_path %></div>
   <div class="nav-link"><%= link_to "Profile", user_path(current_user) %></div>
-  <div class="nav-link"><%= link_to "Bike Shops", "/shop_locator" %> </div>
+  <div class="nav-link"><%= link_to "Bike Shops", bike_shops_path %> </div>
 </div>
