--- a/app/assets/stylesheets/components/_progress_bar.scss
+++ b/app/assets/stylesheets/components/_progress_bar.scss
@@ -1,7 +1,8 @@
 .progress {
   width: 100%;
-  height: 16px;
+  height: 18px;
   border-radius: 16px;
+  margin-top: 8px;
 }
 
 .progress-bar {
@@ -11,10 +12,13 @@
 
 .progress-info {
   height: 100%;
-  width: auto;
-  flex-grow: 1;
+  margin: 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
   text-align: start;
-  margin-bottom: 10px;
+  flex-grow: 1;
+  padding-left: 8px;
   p {
     margin: 0;
   }
@@ -22,4 +26,12 @@
     font-weight: 700;
     margin-bottom: 0;
   }
+}
+
+.progress-bars-container {
+  padding-left: 8px;
+  flex-grow: 1;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
