link fix for bike shop locator

--- a/app/views/bike_components/show.html.erb
+++ b/app/views/bike_components/show.html.erb
@@ -38,7 +38,7 @@
     <div class="comp-advise-image"></div>
     <p><%= @bike_component.component.check_advice %></p>
     <p>If you feel this component needs replacing, either replace it yourself or use our handy Bike Shop Locator tool below!</p>
-    <%= link_to "Bike Shop Locator", shop_locator_path, class: "custom-btn green"%>
+    <%= link_to "Bike Shop Locator", bike_shops_path, class: "custom-btn green"%>
     </div>
   </div>
 </div>
