--- a/app/views/bike_shops/_list.html.erb
+++ b/app/views/bike_shops/_list.html.erb
@@ -11,7 +11,7 @@
             <div class="shop-card-info">
               <h4> <%= shop.name %> </h4>
               <p> <%= shop.location %> </p>
-              <p> <%= shop.website %> </p>
+              <a href= "https://<%= shop.website %>" target="_blank"> <%= shop.website %> </a>
               <p> <%= shop.phone_number %> </p>
               <p>
                 <% shop.rating.times do %>
