--- a/app/views/bike_shops/index.html.erb
+++ b/app/views/bike_shops/index.html.erb
@@ -16,7 +16,7 @@
   </div>
 
   <div class="container-map">
-    <div style="width: 100%; height: 100%;"
+    <div style="width: 100%; height: 100%; border-radius: 16px;"
     data-controller="map"
     data-map-markers-value="<%= @markers.to_json %>"
     data-search-bar-target="map"
