--- a/app/views/bikes/index.html.erb
+++ b/app/views/bikes/index.html.erb
@@ -42,7 +42,7 @@
 
           <% bike.bike_components.each do |bike_component| %>
             <%= link_to bike_bike_component_path(bike, bike_component) do %>
-              <div class="component-card">
+              <div class="component-card" data-controller="delete-check">
 
                 <div class="card-image-info-wrapper">
                   <div class="component-card-image">
@@ -52,9 +52,10 @@
                   <div class="progress-info">
                     <div class="component-name-and-delete">
                       <h2> <%= bike_component.component.name %> </h2>
-                      <%= link_to bike_bike_component_path(bike, bike_component), class: "text-decoration-none", data: { turbo_method: :delete, turbo_confirm: "Are you sure you want to delete this part?" } do %>
-                        <i class="fa-solid fa-xmark"></i>
-                      <% end %>
+                      <div>
+                        <button class="component-delete-button" data-action="click->delete-check#delete_component"><i class="fa-solid fa-xmark"></i></button>
+                        <%= link_to "", bike_bike_component_path(bike, bike_component), class: "text-decoration-none d-none", data: { 'delete-check-target' => 'icon', turbo_method: :delete } %>
+                      </div>
                     </div>
 
                     <div class="progress-bar-text">
