--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -23,10 +23,13 @@
       <% end %>
     <% end %>
 
-    <div class="profile-button-container">
-      <button class="green custom-btn"> <%= link_to "Edit Profile", edit_user_registration_path%> </button>
-
-      <button class="green custom-btn"> <%= link_to "Log out", destroy_user_session_path, data: {turbo_method: :delete} %> </button>
+    <div class="profile-button-container" data-controller="logout-check">
+      <button class="green custom-btn" style="width: 150px;"> <%= link_to "Edit Profile", edit_user_registration_path %> </button>
+      <div>
+        <button data-action="click->logout-check#logout", class="green custom-btn" style="width: 150px;">Log out</button>
+        <%# this link is triggered by stimulus (logout-check) %>
+        <%= link_to "", destroy_user_session_path, data: { 'logout-check-target' => "link", turbo_method: :delete} %>
+      </div>
     </div>
   </div>
 </div>
