--- a/app/views/bikes/edit.html.erb
+++ b/app/views/bikes/edit.html.erb
@@ -6,7 +6,11 @@
     <%= simple_form_for @bike do |f| %>
       <%= f.input :make, label: 'Make' %>
       <%= f.input :model, label: 'Model' %>
-      <%= f.submit value: 'Add Bike to My Garage' %>
+      <% if @bike.photo.attached? %>
+        <%= cl_image_tag @bike.photo.key, height: 100 %>
+      <% end %>
+      <%= f.input :photo, as: :file, required: false %>
+      <%= f.submit value: 'Update Bike in My Garage' %>
     <% end %>
   </div>
 
