--- a/app/views/bikes/index.html.erb
+++ b/app/views/bikes/index.html.erb
@@ -28,6 +28,9 @@
                 <%= link_to edit_bike_path(bike), class: "text-decoration-none pen-icon" do %>
                   <i class="fa-solid fa-pen"></i>
                 <% end %>
+                <%= link_to new_bike_path(bike), class: "text-decoration-none pen-icon" do %>
+                  <i class="fa-solid fa-plus"></i>
+                <% end %>
               </div>
             </div>
 
@@ -38,6 +41,8 @@
                 <%= image_tag "https://i.etsystatic.com/19543171/r/il/f13c94/4513785165/il_fullxfull.4513785165_h290.jpg", :class => "img-thumbnail" %>
               <% end %>
             </div>
+
+            <%# <%= cl_image_tag @bike.photo.key %>
 
             <p style="text-align: right; font-style: italic"> <%= link_to "Add Component", new_bike_bike_component_path(bike) %> </p>
 
