in the middle of a few things

--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -108,3 +108,13 @@
   margin: 0;
   padding-right: 3px;
 }
+
+.comp-show-mini-card {
+  width: 100%;
+  height: auto;
+  background-color: white;
+  border-radius: 16px;
+  padding: 16px;
+  margin-top: 16px;
+  box-shadow: 0 0 1px $green;
+}
