--- a/app/assets/stylesheets/components/_container.scss
+++ b/app/assets/stylesheets/components/_container.scss
@@ -74,7 +74,7 @@
 
 .comp-show-page-header {
   width: 100%;
-  height: 75px;
+  height: 30px;
   display: flex;
   justify-content: space-between;
 }
@@ -83,20 +83,23 @@
   height: 100%;
   aspect-ratio: 1;
   text-align: left;
+  position: fixed;
 }
 
 .comp-show-title {
   height: 100%;
   width: auto;
   flex-grow: 1;
+  // position: relative;
 }
 
 .comp-show-prog-container {
   width: 100%;
   height: auto;
-  padding: 32px 0;
-  margin: 16px 0;
-  border-bottom: 1px solid $green;
+  margin: 48px 0 0 0;
+  h4 {
+    margin-bottom: 32px;
+  }
 }
 
 .check-advise {
