--- a/app/views/bike_components/show.html.erb
+++ b/app/views/bike_components/show.html.erb
@@ -59,7 +59,7 @@
     <div data-toggle-advice-target="togglableElement" class="d-none check-advise">
     <div class="comp-advise-image"></div>
     <p><%= @bike_component.component.check_advice %></p>
-    <p>If you feel this component needs replacing, either replace it yourself or use our handy Bike Shop Locator tool below!</p>
+    <p style="margin-bottom: 16px;">If you feel this component needs replacing, either replace it yourself or use our handy Bike Shop Locator tool below!</p>
     <%= link_to "Bike Shop Locator", bike_shops_path, class: "custom-btn green"%>
     </div>
   </div>
