--- a/app/assets/stylesheets/components/_avatar.scss
+++ b/app/assets/stylesheets/components/_avatar.scss
@@ -1,11 +1,9 @@
 .avatar {
- height: 100%;
+ height: 220px;
  aspect-ratio: 1;
- background-color: cadetblue;
+ background-color: rgba($green, 0.5);
  border-radius: 50%;
- width: 83.23px;
- height: 83.23px;
- overflow: hidden;
+ background-size: cover;
 }
 
 .profile-image {
