Added delete component animations

--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -58,6 +58,11 @@
       margin-top: 5px;
     }
   }
+  transition: all .5s ease;
+  &.away {
+    transform: scale(0.3);
+    opacity: 0;
+  }
 }
 
 .component-card-image {
