strava load time sorted with sidekiq

--- a/app/views/bike_components/show.html.erb
+++ b/app/views/bike_components/show.html.erb
@@ -16,7 +16,7 @@
   <div class="comp-show-prog-container">
 
     <h4 style="text-align: left;">
-      Your <%= @bike_component.component.name.downcase %> is set to be checked  every <span style="font-weight: bold;"><%= @bike_component.component.time_until_check %> weeks</span> or every <span style="font-weight: bold;"><%= @bike_component.component.distance_until_check.round %> kms</span>
+      Your <%= @bike_component.component.name.downcase %> is set to be checked  every <span style="font-weight: bold;"><%= @bike_component.component.time_until_check %> weeks</span> or every <span style="font-weight: bold;"><%= @bike_component.distance_until_check.round %> kms</span>
     </h4>
 
     <div class="comp-show-mini-card">
