--- a/app/assets/stylesheets/components/_avatar.scss
+++ b/app/assets/stylesheets/components/_avatar.scss
@@ -3,8 +3,8 @@
  aspect-ratio: 1;
  background-color: cadetblue;
  border-radius: 50%;
- width: 83.23px;
- height: 83.23px;
+ width: 125px;
+ height: 125px;
  overflow: hidden;
 }
 
@@ -12,4 +12,5 @@
   width: 100%;
   height: 100%;
   object-fit: cover;
+  box-shadow: 0px 0px 2px;
 }
