--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,4 +1,6 @@
+<div class="d-flex justify-content-center pt-4">
 <h2>Edit <%= resource_name.to_s.humanize %></h2>
+</div>
 <div class="page-container">
 
 <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
@@ -12,21 +14,24 @@
     <% end %>
 
     <%= f.input :password,
-                hint: "leave it blank if you don't want to change it",
+                hint: "Leave it blank if you don't want to change it",
                 required: false,
                 input_html: { autocomplete: "new-password" } %>
     <%= f.input :password_confirmation,
                 required: false,
                 input_html: { autocomplete: "new-password" } %>
     <%= f.input :current_password,
-                hint: "we need your current password to confirm your changes",
+                hint: "We need your current password to confirm your changes",
                 required: true,
                 input_html: { autocomplete: "current-password" } %>
-    <%= f.input :profile_image, as: :file %>
+    <% if @user.profile_image.attached? %>
+      <%= cl_image_tag @user.profile_image.key, height: 100 %>
+    <% end %>
+    <%= f.input :profile_image, as: :file, required: false, label: 'Current profile picture' %>
   </div>
 
   <div class="form-actions">
-    <%= f.button :submit, "Update", class: 'btn btn-primary' %>
+    <%= f.button :submit, "Update", class: 'btn btn-primary mb-4' %>
   </div>
 <% end %>
 
