Fix seed create bugs.

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -14,7 +14,7 @@
       <% end %>
       <button class="green custom-btn"> <%= link_to "Add a Bike", new_bike_path%> </button>
       <% if @strava_connected %>
-        <p style="margin-top: 16px;">Strava connected :white_check_mark:</p>
+        <p style="margin-top: 16px;">Strava connected ✅ </p>
         <%= button_to "Sync Strava rides", sync_strava_users_path, data: { turbo: false }, class: 'custom-btn' %><br />
       <% else %>
         <p style="margin-top: 32px !important;">Strava not connected ❌ </p>
