--- a/app/views/bikes/index.html.erb
+++ b/app/views/bikes/index.html.erb
@@ -26,7 +26,7 @@
               <% end %>
               <div class="bike-options d-flex">
                 <%= link_to edit_bike_path(bike), class: "text-decoration-none pen-icon" do %>
-                  <i class="fa-solid fa-pen"></i>
+                  <i class="fa-solid fa-pen" style="margin-right: 3px;"></i>
                 <% end %>
                 <%= link_to new_bike_path(bike), class: "text-decoration-none pen-icon" do %>
                   <i class="fa-solid fa-plus"></i>
@@ -55,20 +55,12 @@
                     <%= cl_image_tag(bike_component.component.icon.key, class:"bike-component-image") %>
                   </div>
 
-                  <div class="progress-info">
-                    <div class="component-name-and-delete">
-                      <h2 style="color: #0D5D56;"> <%= bike_component.component.name %> </h2>
-                      <div>
-                        <button class="component-delete-button" data-action="click->delete-check#delete_component"><i class="fa-solid fa-xmark"></i></button>
-                        <%= link_to "", bike_bike_component_path(bike, bike_component), class: "text-decoration-none d-none", data: { 'delete-check-target' => 'icon', turbo_method: :delete } %>
-                      </div>
-                    </div>
-
                       <div class="progress-info">
                         <div class="component-name-and-delete">
-                          <h2> <%= bike_component.component.name %> </h2>
+                          <h2 style="color: #0D5D56;"> <%= bike_component.component.name %> </h2>
                           <div>
-                            <button class="component-delete-button" data-action="click->delete-check#delete_component"><i class="fa-solid fa-xmark"></i></button>                          </div>
+                            <button class="component-delete-button" data-action="click->delete-check#delete_component"><i class="fa-solid fa-xmark"></i></button>
+                          </div>
                         </div>
 
                         <div class="progress-bar-text">
@@ -88,7 +80,7 @@
                         </div>
                       </div>
                   </div>
-                </div>
+
 
 
                   <div class="bars">
