--- a/app/assets/stylesheets/components/_logo.scss
+++ b/app/assets/stylesheets/components/_logo.scss
@@ -1,16 +1,18 @@
 .logo {
-  font-size: 96px;
-  color: $black;
-  margin: 18px 0 0 0;
+  font-size: 110px;
+  color: $orange;
+  text-shadow: 0px 1px 2px $black;
+  margin: 8px 0 0 0;
 }
 
 .logo_strap_line {
   color: $black;
   margin: 8px 0 40px 0;
-  font-size: 18px;
+  font-size: 16px;
 }
 
 .logo-img {
+  scale: 0.8;
   margin: 24px 0 0 0;
   -webkit-animation:spin 12s linear infinite;
   -moz-animation:spin 12s linear infinite;
