Made changes to bike shop locator and edit profile page + my garage

--- a/app/views/bike_shops/index.html.erb
+++ b/app/views/bike_shops/index.html.erb
@@ -9,9 +9,7 @@
             action: "keyup->search-bar#search"
           }
       %>
-      <button id="zoomToCurrentLocation" class="btn btn-primary">Zoom to Current Location</button>
-
-      <%= submit_tag "Search", name: "", class: "btn btn-primary" %>
+      <button id="zoomToCurrentLocation" class="btn btn-primary"><i class="fa-solid fa-location-crosshairs"></i></button>
     <% end %>
   </div>
 
